--- a/docs/css/black-book-view.css
+++ b/docs/css/black-book-view.css
@@ -8,8 +8,8 @@
   height: 100%;
 }
 
-.flip-book .view .fnav {
-}
+/* .flip-book .view .fnav {
+} */
 
 .flip-book .view .prev, .flip-book .view .next {
   position: absolute;
@@ -247,9 +247,9 @@
 .ctrl .fnavbar .menu .active {
   background-color: #444;
 }
-.ctrl .fnavbar .menu .active:hover {
-  /*background-color: #444;*/
-}
+/* .ctrl .fnavbar .menu .active:hover {
+  background-color: #444;
+} */
 .ctrl .fnavbar .menu li:hover {
   background-color: #333;
   cursor: pointer;
