--- a/src/scss/layouts/_body.scss
+++ b/src/scss/layouts/_body.scss
@@ -18,7 +18,7 @@ html, body {
 	height: 95vh;
 	width: 95%;
 	margin: 20px auto;
-	border: 1px solid rgb(0, 0, 0);
+	// border: 1px solid rgb(0, 0, 0);
 	// box-shadow: 0 0 5px rgb(0, 0, 0);
 }
 .fullscreen {
